--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,23 @@
 :root{
     --primaryColor1: #17254E;
+    --h2Color:#0E2A46;
     --yellowColor  : #FFD25D;
     --lightPurpule: #704FE6;
     --blackColor:#000000;
+
+
+}
+
+@media screen and (max-width:992px) {
+    .container {
+        width: calc(100% - 100px);
+
+    }
+}
+
+@media screen and (max-width:576px) {
+    .container {
+        width: calc(100% - 40px);
+
+    }
 }
