--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -220,7 +220,7 @@
 
 }
 
-.card-body {
+.courses  .card-body {
     background-image: url("../img/courses/backgroundCard.svg");
     background-repeat: no-repeat;
     background-position: center;
@@ -252,33 +252,7 @@
 /* courses end */
 
 
-/* banner start */
-.banner {
 
-    background-image: url("../img/banner/bannerBackground.svg");
-    background-repeat: no-repeat;
-    background-position: center;
-
-}
-
-.banner span {
-    color: #FFD25D;
-}
-
-.banner h3 {
-    color: #ffffff;
-    font-weight: bold;
-}
-
-@media screen and (max-width:600px) {
-
-    .banner {
-        background-color: var(--primaryColor1);
-        background-image: none;
-    }
-}
-
-/* banner end */
 
 /* about start */
 
@@ -343,6 +317,71 @@
 }
 
 /* about end */
+
+/* banner start */
+.banner {
+
+    background-image: url("../img/banner/bannerBackground.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+
+}
+
+.banner span {
+    color: #FFD25D;
+}
+
+.banner h3 {
+    color: #ffffff;
+    font-weight: bold;
+}
+
+@media screen and (max-width:600px) {
+
+    .banner {
+        background-color: var(--primaryColor1);
+        background-image: none;
+    }
+}
+
+/* banner end */
+
+/*  features start*/
+.features{
+    padding-top:150px;
+}
+
+.features .left-side .top-side .features-h span{
+    background-color: #E9E2FF;
+    color: var(--lightPurpule);
+    border-radius: 5px;
+}
+.features .left-side .bottom-side{
+    gap: 20px;
+}
+.features .left-side .bottom-side .card{
+    background-color: #E9E2FF;
+}
+
+.features .left-side .bottom-side .card .card-text{
+    color: #4D5756;
+}
+
+.features .left-side .bottom-side .card{
+    flex-basis: 350px;
+    
+}
+.features .right-side .right-top-image {
+    top: -34px;
+    right: -90px;
+}
+
+@media screen and (max-width:1100px) {
+    .right-side {
+       display: none;
+    }
+}
+/* features end  */
 
 /* newsLater start  */
 .newsLater {
