--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -65,6 +65,16 @@
     color: #FFFFFF;
 }
 
+.hero-right-side img {
+    transition: transform .35s ease;
+    transform-origin: center;
+    will-change: transform;
+}
+
+.hero-right-side img:hover {
+    transform: scale(1.06) rotate(2deg);
+}
+
 @media screen and (max-width:750px) {
 
     .heros img {
@@ -98,8 +108,14 @@
     gap: 20px;
     color: #0E2A46;
     padding: 15px;
-
     border-radius: 10px;
+    transition: transform .35s ease;
+    transform-origin: center;
+    will-change: transform;
+}
+
+.categories .category:hover {
+    transform: scale(1.06);
 }
 
 .categories .cat-1 {
@@ -207,6 +223,18 @@
     color: var(--primaryColor1);
 
 }
+
+.card.course .card-top img {
+
+    transition: transform .35s ease;
+    transform-origin: center;
+    will-change: transform;
+}
+
+.card.course:hover .card-top img {
+    transform: scale(1.1) rotate(-2deg);
+}
+
 
 .courses .course-teacher .btn span {
     color: #ffff;
@@ -392,7 +420,7 @@
     margin-top: 150px;
     padding-top: 150px;
     background-image: url("../img/testimonial/Background.webp");
-   
+
     position: relative;
 }
 
@@ -444,12 +472,16 @@
     padding: 20px;
 }
 
+
 .testimonial-content {
     flex-direction: row;
+    gap: 25px;
 }
 
 .testimonial .card-testimonial {
     position: relative;
+    border-color: var(--primaryColor1) !important;
+    margin-left: 25px;
 }
 
 .testimonial .card-testimonial .icon-testimonial {
@@ -475,7 +507,7 @@
 
 @media screen and (max-width:900px) {
     .testimonial {
-    margin-top: 48px;
+        margin-top: 48px;
     }
 
     .testimonial .testimonial-header {
@@ -486,7 +518,7 @@
         flex-direction: column;
     }
 
- 
+
 }
 
 /* testimonial end  */
@@ -595,6 +627,16 @@
 
 .popular .card {
     background-image: url("../img/popular/background.svg");
+}
+
+.blogs .card-img-top {
+    transition: transform .35s ease;
+    transform-origin: center;
+    will-change: transform;
+}
+
+.blogs .card-img-top:hover {
+      transform: scale(1.06);
 }
 
 .popular .blogs .btn {
